--- a/htmlcssHW.css
+++ b/htmlcssHW.css
@@ -46,7 +46,104 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
 /*This is the start point*/
 /*This is the start point*/
 /*This is the start point*/
 /*This is the start point*/
+.line{
+	border-left: solid grey 0.5px;
+	height:80%;
+	left: 50%;
+	/*position: absolute;*/
+   }
+   .top{
+	width: 100%;
+	height: 30px;
+	/*border: black dashed 1px;*/ /*just for auxiliary line!!*/
+	display: flex;
+	justify-content: end;
+	background-color: #f6f6f6;
+	padding: 5px;
+	box-sizing: border-box;
+   }
+   .Page{
+	margin-right: 10px;
+	margin-left: 2px;
+	color: #4460a0;
+   }
+   .Fllow{
+	margin-left: 2px;
+	margin-right: 2px;
+	color: #00aaec;
+   }
+   .bird{
+	margin-left: 10px;
+	height: 16px;
+   }
+   .fb{
+	height: 16px;
+   }
+   .secondT{
+	/*border: dashed black 1px;*/ /*just for auxiliary line!!*/
+	width: 100%;
+	height: 51px;
+	background-color: white;
+	display: flex;
+	justify-content: space-between;
+	/*padding-top: 15px;*/
+	box-sizing: border-box;
+   }
+   .van{
+	display: flex;
+   }
+   .logo{
+	/*background-color: blue;*/
+	height: 100%;
+	width: 200px;
+   }
+   .hex{
+	text-align: center;
+}
+   .homepage, .product, .contact{
+	color: #b8ebda;
+	/*background-color: black;*/
+	vertical-align: middle;
+   }
+   .homepage{
+	margin-top: 15px;
+	margin-right: 0px;
+   }
+   .product{
+	margin-top: 15px;
+	margin-right: 30px;
+	margin-left: 30px;
+   }
+   .contact{
+	margin-top: 15px;
+	margin-left: 0px;
+   }
+   /*.banner{
+	border: dashed black 1px;
+	height: 346px;
+	background-image: url(../htmlcsshomework/image/banner.png);
+	background-repeat: no-repeat;
+	background-position: 100%;*/   /*there is a qusetion here why makes the imge on the right-end*/
+	/*background-size: cover;}*/
+   .banner1{
+	/*border: solid black 1px;*/
+	width: 50%;
+	height: 346px;
+	background-image: url(./image/banner\ resize.png);
+	/*background-color: red;*/
+	display: inline-block;
+   }
+   .banner2{
+	/*border: solid black 1px;*/
+	width: 50%;
+	height: 346px;
+	background-image: url(././image/banner.png);
+	/*background-color: blue;*/
+	display: inline-block;
+   }
